# ot-harjoitustyo

./: .coveragerc  .env  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/: viikko1.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl.md  monopoli.md
src/: config.py  db_connection.py  index.py  initialize_db.py
src/entities/: score.py  sudoku_game.py
src/repositories/: score_repository.py
src/services/: sudoku_game.py  sudoku_service.py
src/tests/: initialize_db_test.py  sudoku_game_test.py
src/tests/entities/: score_test.py
src/tests/repositories/: score_repository_test.py
src/tests/services/: sudoku_game_test.py  sudoku_service_test.py
src/ui/: sudoku_ui.py
